--- a/res/values/du_colors.xml
+++ b/res/values/du_colors.xml
@@ -19,5 +19,13 @@
     <color name="switch_bar_bg_activated_dark">#242424</color>
     <color name="switch_bar_bg_deactivated_dark">#333333</color>
 
+    <!-- Interval seekbar -->
+    <declare-styleable name="IntervalSeekBar">
+        <attr name="minI" format="float" />
+        <attr name="maxI" format="float" />
+        <attr name="defaultValuePure" format="float" />
+        <attr name="digits" format="integer" />
+    </declare-styleable>
+
 </resources>
 
