--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -147,6 +147,12 @@
             android:summary="@string/force_ambient_for_media_pref_summary"
             settings:userRestriction="no_ambient_display" />
 
+    <com.android.settings.display.FontDialogPreference
+        android:key="custom_font"
+        android:icon="@drawable/ic_font_picker"
+        android:title="@string/font_picker_title"
+        android:persistent="false" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
