Add OnePlus dashboard icons [1/2]
Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/res/values/du_config.xml
+++ b/res/values/du_config.xml
@@ -20,4 +20,6 @@
          and currently depends on QC's proprietary telephony stack -->
     <bool name="config_enableManualSubProvisioning">true</bool>
 
+    <color name="settings_icon_oneplus">@android:color/white</color>
+
 </resources>
