--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -166,5 +166,6 @@
     <string name="theming_settings_dashboard_icons_default_accent">Round (Accent)</string>
     <string name="theming_settings_dashboard_icons_plain">Oreo</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Oreo (Accent)</string>
+    <string name="theming_settings_dashboard_icons_default_oneplus">Round (OnePlus)</string>
 
 </resources>
