--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -149,4 +149,11 @@
     <!-- Font picker -->
     <string name="font_picker_title">Font</string>
     <string name="font_picker_progress">Applying new font\u2026</string>
+
+    <!-- Switch styles -->
+    <string name="switch_style_title">Switch appearance</string>
+    <string name="switch_default">Default</string>
+    <string name="switch_md2">Material Design 2</string>
+    <string name="switch_oneplus">OnePlus</string>
+
 </resources>
