--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -137,4 +137,8 @@
     <string name="keyguard_multiuser_switch_title">Multiuser switch</string>
     <string name="keyguard_multiuser_switch_summary">Show multiuser switch on the statusbar</string>
 
+    <!-- Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sound</string>
+    <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string> 
+
 </resources>
