Display : Move unofficial features to a separate category
Change-Id: Ic70b4a28f9fd0a53cbafe4344ecab0ba95820b14
Signed-off-by: sayan7848 <sayan7848@gmail.com>

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -157,4 +157,6 @@
     <string name="switch_oneplus">OnePlus</string>
     <string name="switch_tg">Telegram</string>
 
+    <!-- Extra options -->
+    <string name="extra_category">Extra options</string>
 </resources>
