--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -147,12 +147,6 @@
             android:summary="@string/force_ambient_for_media_pref_summary"
             settings:userRestriction="no_ambient_display" />
 
-    <com.android.settings.display.FontDialogPreference
-        android:key="custom_font"
-        android:icon="@drawable/ic_font_picker"
-        android:title="@string/font_picker_title"
-        android:persistent="false" />
-
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -174,14 +168,7 @@
             android:key="qs_tile_style"
             android:title="@string/qs_tile_style_title" />
 
-        <ListPreference
-            android:key="switch_style"
-            android:title="@string/switch_style_title"
-            android:persistent="false"
-            android:entries="@array/switch_style_entries"
-            android:entryValues="@array/switch_style_values" />
-
-     </PreferenceCategory>
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="density_category"
@@ -203,6 +190,25 @@
         <com.android.settings.display.DensityPreference
             android:key="density"
             android:title="@string/developer_smallest_width" />
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="extra_category"
+        android:title="@string/extra_category"> 
+
+        <com.android.settings.display.FontDialogPreference
+            android:key="custom_font"
+            android:icon="@drawable/ic_font_picker"
+            android:title="@string/font_picker_title" 
+            android:persistent="false" />
+        
+        <ListPreference
+            android:key="switch_style"
+            android:title="@string/switch_style_title"
+            android:persistent="false"
+            android:entries="@array/switch_style_entries"
+            android:entryValues="@array/switch_style_values" />
 
     </PreferenceCategory>
 
