--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -159,4 +159,12 @@
 
     <!-- Extra options -->
     <string name="extra_category">Extra options</string>
+
+    <!-- Settings dashboard icon style -->
+    <string name="theming_settings_dashboard_icons_title">Settings dashboard icons</string>
+    <string name="theming_settings_dashboard_icons_default">Round</string>
+    <string name="theming_settings_dashboard_icons_default_accent">Round (Accent)</string>
+    <string name="theming_settings_dashboard_icons_plain">Oreo</string>
+    <string name="theming_settings_dashboard_icons_plain_accent">Oreo (Accent)</string>
+
 </resources>
