--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -210,6 +210,13 @@
             android:entries="@array/switch_style_entries"
             android:entryValues="@array/switch_style_values" />
 
+        <com.dirtyunicorns.support.preferences.SystemSettingIntListPreference
+            android:key="theming_settings_dashboard_icons"
+            android:title="@string/theming_settings_dashboard_icons_title"
+            android:entries="@array/theming_settings_dashboard_icons_entries"
+            android:entryValues="@array/theming_settings_dashboard_icons_values"
+            android:defaultValue="0" />
+
     </PreferenceCategory>
 
 </PreferenceScreen>
