--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -164,7 +164,7 @@
     <string name="theming_settings_dashboard_icons_title">Settings dashboard icons</string>
     <string name="theming_settings_dashboard_icons_default">Round</string>
     <string name="theming_settings_dashboard_icons_default_accent">Round (Accent)</string>
-    <string name="theming_settings_dashboard_icons_plain">Oreo</string>
+    <string name="theming_settings_dashboard_icons_plain">Oreo (For light theme)</string>
     <string name="theming_settings_dashboard_icons_plain_accent">Oreo (Accent)</string>
     <string name="theming_settings_dashboard_icons_default_oneplus">Round (OnePlus)</string>
 
