--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -168,7 +168,7 @@
     <string name="theming_settings_dashboard_icons_plain_accent">Oreo (Accent)</string>
     <string name="theming_settings_dashboard_icons_default_oneplus">Round (OnePlus)</string>
 
-    !-- Privacy Guard -->
+    <!-- Privacy Guard -->
     <string name="privacy_guard_manager_title">Privacy Guard</string>
     <string name="privacy_guard_switch_label">Enable Privacy Guard</string>
     <string name="privacy_guard_dlg_title">Enable Privacy Guard?</string>
